fix(ui5-tree): fixed incorrect display of scrollbars in some browsers
When we have a tree in its minimal form factor, an unnecessary
scrollbars were rendered in some browsers.
Now the issue is fixed and no unnecessary scrollbars would appear.

--- a/packages/main/src/themes/List.css
+++ b/packages/main/src/themes/List.css
@@ -35,6 +35,10 @@
 	z-index: 1;
 }
 
+:host([non-scrollable]) .ui5-list-scroll-container {
+	overflow: hidden;
+}
+
 .ui5-list-root {
 	width: 100%;
 	height: 100%;
